# grrs

./: Cargo.toml  README.md  test2.txt
src/: lib.rs  main.rs
src/tests/: cli.rs
