[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version ="4.4.13", features = ["derive"]}
indicatif = "0.17.7"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"
